tests/errors/sem4.kt
fun foo(): Int {}
fun foo(): Int {} // redeclaration